namespace Tenders.Models;

public abstract class Base
{
    public int Id { get; set; }
}